layout/generic/nsIFrame.h
@@ -2631,6 +2631,11 @@ class nsWeakFrame {
 public:
   nsWeakFrame() : mPrev(nsnull), mFrame(nsnull) { }
 
+  nsWeakFrame(const nsWeakFrame& aOther) : mPrev(nsnull), mFrame(nsnull)
+  {
+    Init(aOther.GetFrame());
+  }
+
   nsWeakFrame(nsIFrame* aFrame) : mPrev(nsnull), mFrame(nsnull)
   {
     Init(aFrame);
@@ -2666,7 +2671,7 @@ public:
 
   PRBool IsAlive() { return !!mFrame; }
 
-  nsIFrame* GetFrame() { return mFrame; }
+  nsIFrame* GetFrame() const { return mFrame; }
 
   nsWeakFrame* GetPreviousWeakFrame() { return mPrev; }
 
